fixed after review

--- a/test/fixtures/input_with_submit_value_form.html
+++ b/test/fixtures/input_with_submit_value_form.html
@@ -3,4 +3,5 @@
   <input type="text" name="name" value="John">
   <label for="job">Job</label>
   <input type="text" name="job" value="Developer">
+  <input type="submit" value="value">
 </form>
