--- a/test/fixtures/input_additional_attributes_form.html
+++ b/test/fixtures/input_additional_attributes_form.html
@@ -1,6 +1,6 @@
 <form action="#" method="post">
   <label for="name">Name</label>
-  <input type="text" name="name" value="John">
+  <input type="text" name="name" value="John" class="user-input">
   <label for="job">Job</label>
   <input type="text" name="job" value="Developer">
 </form>
