--- a/test/fixtures/input_textarea_form.html
+++ b/test/fixtures/input_textarea_form.html
@@ -2,5 +2,5 @@
   <label for="name">Name</label>
   <input type="text" name="name" value="John">
   <label for="job">Job</label>
-  <input type="text" name="job" value="Developer">
+  <textarea cols="20" rows="40" name="job">Developer</textarea>
 </form>
