--- a/test/fixtures/input_with_submit_form.html
+++ b/test/fixtures/input_with_submit_form.html
@@ -1,7 +1,7 @@
 <form action="#" method="post">
   <label for="name">Name</label>
-  <input name="name" type="text">
+  <input type="text" name="name" value="John">
   <label for="job">Job</label>
-  <input name="job" type="text" value="hexlet">
+  <input type="text" name="job" value="Developer">
   <input type="submit" value="Save">
 </form>
